configs in progress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,14 @@
     "types": ["vite/client"],
     "skipLibCheck": true,
 
+    "baseUrl": ".",
+
+    "paths": {
+      "@/*": ["public_html/src/*"],
+      "@ts/*": ["public_html/src/ts/*"],
+      "@scss/*": ["public_html/src/scss/*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -22,5 +30,47 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": [
+    "public_html/src/**/*",
+    "public_html/www/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "public_html/www/dist/**/*"
+  ]
 }
+
+// {
+//   "compilerOptions": {
+//     "target": "ES2022",
+//     "useDefineForClassFields": true,
+//     "module": "ESNext",
+//     "lib": ["ES2022", "DOM", "DOM.Iterable"],
+//     "types": ["vite/client"],
+//     "skipLibCheck": true,
+
+//     "baseUrl": ".",
+
+//     "paths": {
+//       "@/*": ["public_html/src/*"],
+//       "@ts/*": ["public_html/src/ts/*"],
+//       "@scss/*": ["public_html/src/scss/*"]
+//     },
+
+//     /* Bundler mode */
+//     "moduleResolution": "bundler",
+//     "allowImportingTsExtensions": true,
+//     "verbatimModuleSyntax": true,
+//     "moduleDetection": "force",
+//     "noEmit": true,
+
+//     /* Linting */
+//     "strict": true,
+//     "noUnusedLocals": true,
+//     "noUnusedParameters": true,
+//     "erasableSyntaxOnly": true,
+//     "noFallthroughCasesInSwitch": true,
+//     "noUncheckedSideEffectImports": true
+//   },
+//   "include": ["src"]
+// }
