--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npx tsc && npx vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "sass": "^1.93.2",
+    "sass-embedded": "^1.93.2",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
   }
