--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,33 @@
-<jsp-config>
-    <jsp-property-group>
-        <url-pattern>*.jsp</url-pattern>
-        <scripting-invalid>true</scripting-invalid> <!-- Запрещает скриптлеты -->
-        <include-prelude>/WEB-INF/templates/header.jspf</include-prelude> <!-- Автоматическое включение в начало -->
-        <page-encoding>UTF-8</page-encoding> <!-- Кодировка по умолчанию -->
-    </jsp-property-group>
-</jsp-config>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                      http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+    </welcome-file-list>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.css</url-pattern>
+    </servlet-mapping>
+
+<!--    <servlet-mapping>-->
+<!--        <servlet-name>HelloWorld</servlet-name>-->
+<!--        <url-pattern>/welcome</url-pattern>-->
+<!--    </servlet-mapping>-->
+
+<!--    <jsp-config>-->
+<!--        <jsp-property-group>-->
+<!--            <url-pattern>*.jsp</url-pattern>-->
+<!--            <scripting-invalid>true</scripting-invalid> &lt;!&ndash; Запрещает скриптлеты &ndash;&gt;-->
+<!--            <include-prelude>/WEB-INF/templates/header.jspf</include-prelude> &lt;!&ndash; Автоматическое включение в начало &ndash;&gt;-->
+<!--            <page-encoding>UTF-8</page-encoding> &lt;!&ndash; Кодировка по умолчанию &ndash;&gt;-->
+<!--        </jsp-property-group>-->
+<!--    </jsp-config>-->
+
+</web-app>
