moved old ts modules, set up deployment & plane

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+    "strictBindCallApply": true,
+    "noImplicitThis": true,
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": false,
